--- a/src/安装.md
+++ b/src/安装.md
@@ -20,7 +20,9 @@ Delphi 7 总共有 3 个版本，以供不同的用户使用。
 迎界面，如图 1-1 所示。
 - （2）单击“Next”按钮，安装向导提示用户输入序列号（Serial Number）以及授权码（Authorization 
 Key），如图 1-2 所示。相关信息可以在说明书或软件包装上找到，也可在根目录下的相关文件中查找。
-  ![IMG](/.images/安装/20220503201109.png)
+
+  ![IMG](.images/安装/20220503201109.png)
+
 - （3）输入正确的序列号后，单击“Next”按钮进入下一步，此窗口将显示安装 Delphi 7 时所需的
 软件许可协议，如图 1-3 所示。如果用户同意，单击“Next”按钮进入下一步。
 - （4）安装向导提示用户有关 Delphi 7 的详细信息，请用户仔细阅读，以备后用，如图 1-4 所示。
