--- a/src/数组.md
+++ b/src/数组.md
@@ -1,2 +1,85 @@
 # 数组
 
+Delphi支持的数组类型有两种，即静态数组和动态数组，静态数组就是在声明时需要确定大小的数组类型。
+
+## 静态数组
+
+静态数组可以在变量定义的时候进行初始化赋值，动态数组不可以。
+
+**一维数组**
+
+```delphi
+var 
+  Arr1: array[0..10] of Integer;
+  Arr2: array[0..4] of Integer = (1, 2, 3, 4, 5);
+begin
+  Arr1[0] := 123;
+  Writeln(Arr1[0]); // 123
+  Writeln(Arr2[3]); // 4
+end.
+```
+
+**二维数组**
+
+```delphi
+var 
+  Arr: array[0..10, 0..10] of Integer;
+begin
+  Arr[0, 1] := 123;
+  Writeln(Arr[0, 1]); // 123
+end.
+```
+
+## 动态数组
+
+动态数组是指其大小在声明时不能确定的数组，动态数组的大小在使用时确定。分配空间后可以使用 `Finalize(Arr)` 进行释放空间，一般离开数组作用域系统会自动释放。
+
+**一维数组**
+
+```delphi
+var
+  Arr: array of Integer;
+begin
+  SetLength(Arr, 10);
+  Arr[0] := 123;
+  Writeln(Arr[0]); // 123
+  Finalize(Arr);
+end.
+```
+
+**二维数组**
+
+```delphi
+var
+  Arr: array of array of Integer;
+begin
+  SetLength(Arr, 10, 10);
+  Arr[0, 1] := 123;
+  Writeln(Arr[0, 1]); // 123
+  Arr := nil;
+  Finalize(Arr); 
+end.
+```
+
+**几种动态数组释放方法**
+
+- `Arr := nil;`
+- `SetLength(Arr, 0)` 或者 `SetLength(Arr, 0, 0)`
+- `Finalize(Arr)`
+
+## 配合 for 循环
+
+```delphi
+var
+  Arr: array[0..4] of Integer = (1, 2, 3, 4, 5);
+  I: Integer;
+begin
+  for I := 0 to Length(Arr) - 1 do
+  begin
+    Writeln(Arr[I]);
+  end;
+end.
+```
+
+- `Length(Arr)` - 获取数组长度
+
