--- a/src/循环语句.md
+++ b/src/循环语句.md
@@ -1,2 +1,46 @@
 # 循环语句
 
+Delphi 大致分为三种循环：`repeat..until`，`for..to`，`while`，需要注意是的第一种方式始终至少执行一次。
+
+## repeat..until
+
+```delphi
+var
+  items: Array[0..4] of Integer = (1, 2, 3, 4, 5);
+  i: Integer = 0;
+begin
+  repeat
+    writeln(items[i]);
+    i := i + 1;
+  until(i > length(items) - 1);
+end.
+```
+
+## for..to
+
+```delphi
+var
+  items: Array[0..4] of Integer = (1, 2, 3, 4, 5);
+  i: Integer;
+begin
+  for i := 0 to length(items) - 1 do
+  begin
+    writeln(items[i]);
+  end;
+end.
+```
+
+## while
+
+```delphi
+var
+  items: Array[0..4] of Integer = (1, 2, 3, 4, 5);
+  i: Integer = 0;
+begin
+  while(i < length(items)) do
+  begin
+    writeln(items[i]);
+    i := i + 1;
+  end;
+```
+
